--- a/ello-book-project/src/App.css
+++ b/ello-book-project/src/App.css
@@ -60,4 +60,14 @@
 .Toastify__toast-body {
   font-family: 'Mulish', sans-serif;
 }
+.search-container {
+  margin-bottom: 20px; 
+}
 
+.results-container {
+  margin-bottom: 20px;
+}
+
+.reading-list-container {
+  margin-bottom: 20px; 
+}
