Updated ello ui

--- a/ello-book-project/src/App.css
+++ b/ello-book-project/src/App.css
@@ -65,9 +65,9 @@
 }
 
 .results-container {
-  margin-bottom: 20px;
+  flex: 1;
 }
 
 .reading-list-container {
-  margin-bottom: 20px; 
+  width: 400px; 
 }
